# tetris

./: CMakeLists.txt  README.md  index.html  score.php
src/: CMakeLists.txt  i_tetromino.hpp  j_tetromino.hpp  l_tetromino.hpp  o_tetromino.hpp  s_tetromino.hpp  t_tetromino.hpp  table.cpp  table.hpp  tetris.cpp  tetris_webasm.cpp  tetromino.cpp  tetromino.hpp  ui.hpp  ui_text.cpp  z_tetromino.hpp
src/gui/: CMakeLists.txt  ai_mode.hpp  game_state.hpp  ui.cpp  ui.hpp  ui_sdl.cpp  ui_sdl.hpp  ui_text.cpp  ui_text.hpp
src/lib/: CMakeLists.txt  mainloop.cpp  mainloop.hpp  move.hpp  t_tetromino.hpp  table.cpp  table.hpp  tetromino.cpp  tetromino.hpp  tetromino_i.cpp  tetromino_i.hpp  tetromino_j.cpp  tetromino_j.hpp  tetromino_l.cpp  tetromino_l.hpp  tetromino_o.cpp  tetromino_o.hpp  tetromino_s.cpp  tetromino_s.hpp  tetromino_t.cpp  tetromino_t.hpp  tetromino_z.cpp  tetromino_z.hpp  ui.hpp  z_tetromino.hpp
src/main/: CMakeLists.txt  tetris-gui.cpp  tetris.cpp
src/text/: CMakeLists.txt  ui_text.cpp  ui_text.hpp
src/web/: CMakeLists.txt  tetris_webasm.cpp
